# hello-gpu

./: Cargo.toml  README.md  agents.md  build.rs  cargo.toml  hey-gpu  test_add.cu
.cargo/: config.toml
kernels/: vec_add.cu
scripts/: check-gpu-env.ps1  check_env.sh  gen_gpu_report.rs  gpu_smoke_test.ps1  init_gpu_env.ps1  init_rust_cuda.ps1  setup_cuda_paths.ps1
src/: lib.rs  main.rs
