[package]
name    = "hello_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
cust   = { git = "https://github.com/Rust-GPU/Rust-CUDA", branch = "main" } # CUDA host bindings
nvml-wrapper = "0.11" # Management Library (driver details)

serde  = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "gen_gpu_report"
path = "scripts/gen_gpu_report.rs"
